# ABM_PI-2

./: .gitignore  CMakeLists.txt  Readme.md
inc/: Agent.hpp  Population.hpp  Relation.hpp
lib/fl/: libfuzzylite.so.5.1
src/: Agent.cpp  Population.cpp  Relation.cpp  main.cpp
